--- a/kubernetes/monitor/prometheus/app/kube-state-metrics-config.yaml
+++ b/kubernetes/monitor/prometheus/app/kube-state-metrics-config.yaml
@@ -1,6 +1,6 @@
 kube-state-metrics:
-# flux config from https://github.com/fluxcd/flux2-monitoring-example/tree/main blocks getting normal metrics. Config tweaked to allow custom and normal metrics
-#  collectors: [ ] - overwrites collectors in https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-state-metrics/values.yaml
+#  flux config from https://github.com/fluxcd/flux2-monitoring-example/tree/main blocks getting normal metrics. Config tweaked to allow custom and normal metrics
+#  collectors: [ ]  overwrites collectors in https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-state-metrics/values.yaml
   extraArgs:
     - --custom-resource-state-only=false # when set to true only customResourceState resources will be taken into account
     # https://github.com/kubernetes/kube-state-metrics/blob/main/docs/customresourcestate-metrics.md
@@ -26,7 +26,7 @@ kube-state-metrics:
           - imagerepositories
           - imagepolicies
           - imageupdateautomations
-        verbs: [ "list", "watch" ]
+        verbs: ["list", "watch"]
   customResourceState:
     enabled: true
     config:
@@ -44,13 +44,13 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name: [metadata, name]
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  revision: [ status, lastAppliedRevision ]
-                  source_name: [ spec, sourceRef, name ]
+                  exported_namespace: [metadata, namespace]
+                  ready: [status, conditions, "[type=Ready]", status]
+                  suspended: [spec, suspend]
+                  revision: [status, lastAppliedRevision]
+                  source_name: [spec, sourceRef, name]
           - groupVersionKind:
               group: helm.toolkit.fluxcd.io
               version: v2beta1
@@ -63,14 +63,14 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name: [metadata, name]
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  revision: [ status, lastAppliedRevision ]
-                  chart_name: [ spec, chart, spec, chart ]
-                  chart_source_name: [ spec, chart, spec, sourceRef, name ]
+                  exported_namespace: [metadata, namespace]
+                  ready: [status, conditions, "[type=Ready]", status]
+                  suspended: [spec, suspend]
+                  revision: [status, lastAppliedRevision]
+                  chart_name: [spec, chart, spec, chart]
+                  chart_source_name: [spec, chart, spec, sourceRef, name]
           - groupVersionKind:
               group: source.toolkit.fluxcd.io
               version: v1
@@ -83,13 +83,13 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name: [metadata, name]
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  revision: [ status, artifact, revision ]
-                  url: [ spec, url ]
+                  exported_namespace: [metadata, namespace]
+                  ready: [status, conditions, "[type=Ready]", status]
+                  suspended: [spec, suspend]
+                  revision: [status, artifact, revision]
+                  url: [spec, url]
           - groupVersionKind:
               group: source.toolkit.fluxcd.io
               version: v1beta2
@@ -102,14 +102,14 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name: [metadata, name]
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  revision: [ status, artifact, revision ]
-                  endpoint: [ spec, endpoint ]
-                  bucket_name: [ spec, bucketName ]
+                  exported_namespace: [metadata, namespace]
+                  ready: [status, conditions, "[type=Ready]", status]
+                  suspended: [spec, suspend]
+                  revision: [status, artifact, revision]
+                  endpoint: [spec, endpoint]
+                  bucket_name: [spec, bucketName]
           - groupVersionKind:
               group: source.toolkit.fluxcd.io
               version: v1beta2
@@ -122,13 +122,13 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name: [metadata, name]
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  revision: [ status, artifact, revision ]
-                  url: [ spec, url ]
+                  exported_namespace: [metadata, namespace]
+                  ready: [status, conditions, "[type=Ready]", status]
+                  suspended: [spec, suspend]
+                  revision: [status, artifact, revision]
+                  url: [spec, url]
           - groupVersionKind:
               group: source.toolkit.fluxcd.io
               version: v1beta2
@@ -141,14 +141,14 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name: [metadata, name]
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  revision: [ status, artifact, revision ]
-                  chart_name: [ spec, chart ]
-                  chart_version: [ spec, version ]
+                  exported_namespace: [metadata, namespace]
+                  ready: [status, conditions, "[type=Ready]", status]
+                  suspended: [spec, suspend]
+                  revision: [status, artifact, revision]
+                  chart_name: [spec, chart]
+                  chart_version: [spec, version]
           - groupVersionKind:
               group: source.toolkit.fluxcd.io
               version: v1beta2
@@ -161,13 +161,13 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name: [metadata, name]
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  revision: [ status, artifact, revision ]
-                  url: [ spec, url ]
+                  exported_namespace: [metadata, namespace]
+                  ready: [status, conditions, "[type=Ready]", status]
+                  suspended: [spec, suspend]
+                  revision: [status, artifact, revision]
+                  url: [spec, url]
           - groupVersionKind:
               group: notification.toolkit.fluxcd.io
               version: v1beta2
@@ -180,11 +180,11 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name: [metadata, name]
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
+                  exported_namespace: [metadata, namespace]
+                  ready: [status, conditions, "[type=Ready]", status]
+                  suspended: [spec, suspend]
           - groupVersionKind:
               group: notification.toolkit.fluxcd.io
               version: v1beta2
@@ -197,11 +197,11 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name: [metadata, name]
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
+                  exported_namespace: [metadata, namespace]
+                  ready: [status, conditions, "[type=Ready]", status]
+                  suspended: [spec, suspend]
           - groupVersionKind:
               group: notification.toolkit.fluxcd.io
               version: v1
@@ -214,12 +214,12 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name: [metadata, name]
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  webhook_path: [ status, webhookPath ]
+                  exported_namespace: [metadata, namespace]
+                  ready: [status, conditions, "[type=Ready]", status]
+                  suspended: [spec, suspend]
+                  webhook_path: [status, webhookPath]
           - groupVersionKind:
               group: image.toolkit.fluxcd.io
               version: v1beta2
@@ -232,12 +232,12 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name: [metadata, name]
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  image: [ spec, image ]
+                  exported_namespace: [metadata, namespace]
+                  ready: [status, conditions, "[type=Ready]", status]
+                  suspended: [spec, suspend]
+                  image: [spec, image]
           - groupVersionKind:
               group: image.toolkit.fluxcd.io
               version: v1beta2
@@ -250,12 +250,12 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name: [metadata, name]
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  source_name: [ spec, imageRepositoryRef, name ]
+                  exported_namespace: [metadata, namespace]
+                  ready: [status, conditions, "[type=Ready]", status]
+                  suspended: [spec, suspend]
+                  source_name: [spec, imageRepositoryRef, name]
           - groupVersionKind:
               group: image.toolkit.fluxcd.io
               version: v1beta1
@@ -268,9 +268,9 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name: [metadata, name]
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  source_name: [ spec, sourceRef, name ]
+                  exported_namespace: [metadata, namespace]
+                  ready: [status, conditions, "[type=Ready]", status]
+                  suspended: [spec, suspend]
+                  source_name: [spec, sourceRef, name]
