--- a/kubernetes/monitor/mikrotik/ks.yaml
+++ b/kubernetes/monitor/mikrotik/ks.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   dependsOn:
     - name: infrastructure-ingress-logging
+    - name: infrastructure-reloader
   # additional inheritance from infrastructure-ingress-logging
   # - infrastructure-external-secrets-stores
   # - namespaces
