refact(grafana): remove admin user secret

--- a/kubernetes/monitor/prometheus/app/secrets.yaml
+++ b/kubernetes/monitor/prometheus/app/secrets.yaml
@@ -12,11 +12,14 @@ spec:
   target:
     name: grafana-admin-creds
     creationPolicy: Owner
+    template:
+      engineVersion: v2
+      mergePolicy: Replace
+      data:
+        admin-user: admin
+        admin-password: "{{ .password }}"
   data:
-    - secretKey: admin-user
-      remoteRef:
-        key: grafana-admin-username
-    - secretKey: admin-password
+    - secretKey: password
       remoteRef:
         key: grafana-admin-password
 ---
