--- a/kubernetes/infrastructure/flux/gitops/kustomization.yaml
+++ b/kubernetes/infrastructure/flux/gitops/kustomization.yaml
@@ -2,4 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - longhorn-ingress.yaml # special rule for longhorn mgmt url
+  - secret.yaml
+  - dashboard.yaml
