fix(mikrotik): force prometheus scraper to use direct DNS address lookup

--- a/kubernetes/monitor/mikrotik/config/scraper.yaml
+++ b/kubernetes/monitor/mikrotik/config/scraper.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: monitor
 spec:
   staticConfigs:
-    - targets: ["mikrotik.monitor.svc.cluster.local:49090"]
+    - targets: ["mikrotik.monitor.svc.cluster.local.:49090"]
