feat: migrate networking resources to new namespace

--- a/kubernetes/networking/cloudflared/app/secret.yaml
+++ b/kubernetes/networking/cloudflared/app/secret.yaml
@@ -2,20 +2,17 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: vpn
-  namespace: vpn
+  name: cloudflare-tunnel-token
+  namespace: networking
 spec:
   refreshInterval: 24h
   secretStoreRef:
     kind: ClusterSecretStore
     name: azure-keyvault
   target:
-    name: nordvpn
+    name: cloudflare-tunnel-token
     creationPolicy: Owner
   data:
-    - secretKey: username
+    - secretKey: token
       remoteRef:
-        key: nordvpn-username
-    - secretKey: password
-      remoteRef:
-        key: nordvpn-password
+        key: cloudflare-tunnel-token
