--- a/kubernetes/monitor/otel/app/helm-release.yaml
+++ b/kubernetes/monitor/otel/app/helm-release.yaml
@@ -28,7 +28,7 @@ spec:
       containers:
         enabled: true
         excludePaths:
-          - "/var/log/pods/vpn_vpn-*/*/*.log" # longhorn and vpn generate too many events to make them useful
+          - "/var/log/pods/networking_vpn-*/*/*.log" # longhorn and vpn generate too many events to make them useful
           - "/var/log/pods/kube-system_snapshot-controller*/*/*.log"
           - "/var/log/pods/longhorn-system_longhorn-manager*/*/*.log"
           - "/var/log/pods/nginx-internal_logging-nginx-internal-controller*/*/*.log"
