--- a/kubernetes/networking/kustomization.yaml
+++ b/kubernetes/networking/kustomization.yaml
@@ -2,5 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - external-dns-deploy.yaml
-  - external-dns-records.yaml
+  - cloudflared/ks.yaml
+  - unifi/ks.yaml
+  - vpn/ks.yaml
