--- a/kubernetes/networking/unifi/app/unifi-deploy.yaml
+++ b/kubernetes/networking/unifi/app/unifi-deploy.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: unifi
-  namespace: unifi
+  namespace: networking
 spec:
   serviceName: unifi
   replicas: 1
@@ -76,7 +76,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: unifi-ingress
-  namespace: unifi
+  namespace: networking
 spec:
   ports:
     - name: ubnt-8443
@@ -93,7 +93,7 @@ metadata:
   annotations:
     metallb.universe.tf/loadBalancerIPs: ${UNIFI_IP}
     metallb.universe.tf/allow-shared-ip: unifi-lb
-  namespace: unifi
+  namespace: networking
 spec:
   externalTrafficPolicy: Local
   ports:
@@ -111,7 +111,7 @@ metadata:
   annotations:
     metallb.universe.tf/loadBalancerIPs: ${UNIFI_IP}
     metallb.universe.tf/allow-shared-ip: unifi-lb
-  namespace: unifi
+  namespace: networking
 spec:
   externalTrafficPolicy: Local
   ports:
@@ -139,7 +139,7 @@ metadata:
     nginx.ingress.kubernetes.io/backend-protocol: HTTPS
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
   name: unifi-ingress
-  namespace: unifi
+  namespace: networking
 spec:
   ingressClassName: nginx-internal
   rules:
