--- a/kubernetes/networking/unifi/app/unifi-volume.yaml
+++ b/kubernetes/networking/unifi/app/unifi-volume.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=../../../schemas/volume_v1beta2.json
+# yaml-language-server: $schema=../../../../schemas/volume_v1beta2.json
 apiVersion: longhorn.io/v1beta2
 kind: Volume
 metadata:
@@ -32,7 +32,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: unifi-volume-pvc
-  namespace: unifi
+  namespace: networking
 spec:
   accessModes:
     - ReadWriteOnce
