--- a/kubernetes/networking/unifi/ks.yaml
+++ b/kubernetes/networking/unifi/ks.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: app-unifi-unifi
+  name: networking-unifi
   namespace: flux-system
 spec:
   dependsOn:
@@ -10,16 +10,16 @@ spec:
   # additional inheritance from infrastructure-ingress-internal
   # - cluster-settings
   # - namespaces
-  interval: 1h0m0s
-  path: ./kubernetes/apps/unifi/app
+  interval: 1h
+  path: ./kubernetes/networking/unifi/app
   postBuild: # https://github.com/fluxcd/helm-operator/issues/120
     substitute: {}
     substituteFrom:
       - kind: ConfigMap
         name: cluster-settings
   prune: true
+  retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
-  timeout: 5m0s
-  wait: true
+  timeout: 5m
