--- a/kubernetes/networking/vpn/app/helm-release.yaml
+++ b/kubernetes/networking/vpn/app/helm-release.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: vpn
-  namespace: vpn
+  namespace: networking
 spec:
   chart:
     spec:
