feat(prometheus): misc tweaks & getting ready for thanos integration

--- a/kubernetes/monitor/prometheus/app/secrets.yaml
+++ b/kubernetes/monitor/prometheus/app/secrets.yaml
@@ -39,8 +39,8 @@ spec:
     creationPolicy: Owner
     template:
       engineVersion: v2
-      data:
-        thanos.yaml: |
+      data: # format that thanos helmrelease needs it in
+        objstore.yml: |
           type: AZURE
           config:
             storage_account: "{{ .storage_account_name }}"
