--- a/kubernetes/monitor/prometheus/ks.yaml
+++ b/kubernetes/monitor/prometheus/ks.yaml
@@ -13,7 +13,7 @@ spec:
   # - infrastructure-external-secrets-stores
   # - namespaces
   # - repositories
-  interval: 1h0m0s
+  interval: 1h
   path: ./kubernetes/monitor/prometheus/app
   postBuild: # https://github.com/fluxcd/helm-operator/issues/120
     substitute: {}
@@ -21,10 +21,11 @@ spec:
       - kind: ConfigMap
         name: cluster-settings
   prune: true
+  retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
-  timeout: 5m0s
+  timeout: 10m
   wait: true
 ---
 # yaml-language-server: $schema=../../../schemas/kustomization_v1.json
@@ -42,10 +43,11 @@ spec:
   # - infrastructure-ingress-logging
   # - namespaces
   # - repositories
-  interval: 1h0m0s
+  interval: 1h
   path: ./kubernetes/monitor/prometheus/podmonitor
   prune: true
+  retryInterval: 2m
   sourceRef:
     kind: GitRepository
     name: flux-system
-  timeout: 5m0s
+  timeout: 5m
