--- a/kubernetes/clusters/repositories/kustomization.yaml
+++ b/kubernetes/clusters/repositories/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - angelnu-charts.yaml
+  - bitnami.yaml
   - external-secrets.yaml
   - ingress-nginx.yaml
   - jetstack.yaml
