--- a/kubernetes/monitor/prometheus/app/helm-release.yaml
+++ b/kubernetes/monitor/prometheus/app/helm-release.yaml
@@ -187,6 +187,14 @@ spec:
 
       defaultDashboardsTimezone: browser
 
+      grafana.ini:
+        analytics:
+          check_for_plugin_updates: false
+          check_for_updates: false
+          enabled: false
+          feedback_links_enabled: false
+          reporting_enabled: false
+
       ingress:
         enabled: true
         ingressClassName: logging-nginx-internal
