--- a/kubernetes/infrastructure/secrets/stores/clustersecretstore.yaml
+++ b/kubernetes/infrastructure/secrets/stores/clustersecretstore.yaml
@@ -9,7 +9,7 @@ spec:
   provider:
     azurekv:
       tenantId: ${AZURE_TENANT_ID}
-      vaultUrl: "https://${AZURE_VAULT_NAME}.vault.azure.net"
+      vaultUrl: ${AZURE_VAULT_NAME}
       authSecretRef:
         clientId:
           name: azure-secrets-store-cred
