--- a/ansible/inventory/inventory-prod.yml
+++ b/ansible/inventory/inventory-prod.yml
@@ -1,11 +1,4 @@
 ---
-all:
-  children:
-    localhost:
-    k3s_cluster:
-  vars:
-    kv_url: 'https://vaultkxtjt3mfw7.vault.azure.net/'
-
 localhost:
   hosts:
     127.0.0.1
@@ -33,6 +26,6 @@ k3s_cluster:
     ansible_python_interpreter: /usr/bin/python3
     nut_controller_address: 192.168.0.225
     k3s_registration_address: 192.168.0.225
-    pushover_app_token: "{{ lookup('azure_keyvault_secret', 'pushover-app-token', vault_url=kv_url) }}"
-    pushover_user_token: "{{ lookup('azure_keyvault_secret', 'pushover-user-token', vault_url=kv_url) }}"
-    nut_user_controller_password: "{{ lookup('azure_keyvault_secret', 'nut-user-controller-password', vault_url=kv_url) }}"
+    pushover_app_token: "{{ lookup('azure_keyvault_secret', 'pushover-app-token', vault_url=azure_keyvault) }}"
+    pushover_user_token: "{{ lookup('azure_keyvault_secret', 'pushover-user-token', vault_url=azure_keyvault) }}"
+    nut_user_controller_password: "{{ lookup('azure_keyvault_secret', 'nut-user-controller-password', vault_url=azure_keyvault) }}"
