--- a/ansible/roles/k3s/tasks/post_k3s_install.yml
+++ b/ansible/roles/k3s/tasks/post_k3s_install.yml
@@ -49,3 +49,24 @@
     - k3s_control_node is defined
     - k3s_control_node
   changed_when: false
+
+- name: Create special values configmap
+  become: true
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: ConfigMap
+      metadata:
+        name: special-settings
+        namespace: flux-system
+      data:
+        AZURE_VAULT_NAME: "{{ azure_keyvault | b64encode }}"
+        AZURE_TENANT_ID: "{{ lookup('azure_keyvault_secret', 'azuread-tenantid', vault_url=azure_keyvault) }}"
+        AZURE_SPLUNK_STORAGE_ACCOUNT: "{{ lookup('azure_keyvault_secret', 'splunk-blob-storage-account', vault_url=azure_keyvault) }}" # added into configmap as used by field not able to pull from secret
+    kubeconfig: "{{ kube_file }}"
+  no_log: true
+  when:
+    - k3s_control_node is defined
+    - k3s_control_node
+  changed_when: false
