--- a/kubernetes/infrastructure/secrets/ks.yaml
+++ b/kubernetes/infrastructure/secrets/ks.yaml
@@ -26,7 +26,6 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
-    - name: cluster-settings
     - name: infrastructure-external-secrets # needs crds to be installed first
   # additional inheritance from infrastructure-external-secrets
   # - namespaces
@@ -37,7 +36,7 @@ spec:
     substitute: {}
     substituteFrom:
       - kind: ConfigMap
-        name: cluster-settings
+        name: special-settings
   prune: true
   sourceRef:
     kind: GitRepository
