--- a/kubernetes/monitor/prometheus/app/secrets.yaml
+++ b/kubernetes/monitor/prometheus/app/secrets.yaml
@@ -27,6 +27,28 @@ spec:
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
+  name: grafana-azure-auth
+  namespace: monitor
+spec:
+  refreshInterval: 24h
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: azure-keyvault
+  target:
+    name: grafana-azure-auth
+    creationPolicy: Owner
+  data:
+    - secretKey: clientid
+      remoteRef:
+        key: grafana-dashboard-app-clientid
+    - secretKey: clientsecret
+      remoteRef:
+        key: grafana-dashboard-app-clientsecret
+---
+# yaml-language-server: $schema=../../../../schemas/externalsecret_v1beta1.json
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
   name: prometheus-thanos-blob-creds
   namespace: monitor
 spec:
