--- a/kubernetes/monitor/prometheus/app/helm-release.yaml
+++ b/kubernetes/monitor/prometheus/app/helm-release.yaml
@@ -221,14 +221,19 @@ spec:
           skip_org_role_sync: false
           use_pkce: true
 
+        server:
+          root_url: https://mgmt.${DOMAIN_NAME}/grafana
+          serve_from_sub_path: false
+
       ingress:
         enabled: true
         ingressClassName: nginx-internal
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-issuer
+          nginx.ingress.kubernetes.io/rewrite-target: /$1
         hosts:
-          - grafana.${DOMAIN_NAME}
-        path: /
+          - mgmt.${DOMAIN_NAME}
+        path: /grafana/?(.*)
 
       sidecar:
         datasources:
