--- a/kubernetes/monitor/prometheus/app/helm-release.yaml
+++ b/kubernetes/monitor/prometheus/app/helm-release.yaml
@@ -39,6 +39,7 @@ spec:
     defaultRules:
       rules:
         etcd: false
+        kubeProxy: false
         windows: false
 
     fullnameOverride: prometheus
@@ -157,9 +158,6 @@ spec:
             url: https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/grafana/dashboards/request-handling-performance.json
             datasource: Prometheus
         grafana-dashboards-thanos:
-          thanos-bucket-replicate:
-            url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/bucket-replicate.json
-            datasource: Prometheus
           thanos-compact:
             url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/thanos/dashboards/compact.json
             datasource: Prometheus
@@ -316,6 +314,14 @@ spec:
             sourceLabels: ["__name__"]
             regex: "(apiserver_audit|apiserver_client|apiserver_delegated|apiserver_envelope|apiserver_storage|apiserver_webhooks|authenticated_user|authentication|disabled_metric|go|hidden_metric|kubernetes_build|kubernetes_feature|leader_election|process_cpu|process_max|process_open|process_resident|process_start|process_virtual|registered_metric|rest_client|scheduler|scrape_duration|scrape_samples|scrape_series|workqueue)_(.+)"
 
+    nodeExporter:
+      enabled: true
+      operatingSystems:
+        linux:
+          enabled: true
+        darwin:
+          enabled: false
+
     prometheus:
       prometheusSpec:
         # discover resources in non "monitor" namespaces
@@ -326,7 +332,7 @@ spec:
         serviceMonitorSelectorNilUsesHelmValues: false
 
         thanos:
-          image: quay.io/thanos/thanos:v0.31.0
+          image: quay.io/thanos/thanos:v0.32.2
           objectStorageConfig:
             key: objstore.yml
             name: prometheus-thanos-blob-creds
