fix(linting): ignore ansible variable naming

--- a/requirements-dev-frozen.txt
+++ b/requirements-dev-frozen.txt
@@ -2,36 +2,36 @@ aiodns==3.0.0
 aiohttp==3.8.5
 aiomultiprocess==0.9.0
 aiosignal==1.3.1
-ansible-compat==4.1.6
-ansible-core==2.15.3
-ansible-lint==6.17.2
-argcomplete==3.1.1
+ansible-compat==4.1.10
+ansible-core==2.15.4
+ansible-lint==6.20.0
+argcomplete==3.1.2
 async-timeout==4.0.3
 attrs==23.1.0
 bc-detect-secrets==1.4.30
 bc-jsonpath-ng==1.5.9
 bc-python-hcl2==0.3.51
-beartype==0.15.0
+beartype==0.16.2
 beautifulsoup4==4.12.2
-black==23.7.0
+black==23.9.1
 boolean.py==4.0
-boto3==1.28.30
-botocore==1.31.30
-bracex==2.3.post1
+boto3==1.28.53
+botocore==1.31.53
+bracex==2.4
 cached-property==1.5.2
 cachetools==5.3.1
 certifi==2023.7.22
 cffi==1.15.1
 cfgv==3.4.0
 charset-normalizer==3.2.0
-checkov==2.4.3
+checkov==2.4.48
 click==8.1.7
 click-option-group==0.5.6
-cloudsplaining==0.5.2
+cloudsplaining==0.6.1
 colorama==0.4.6
 ConfigArgParse==1.7
 contextlib2==21.6.0
-cryptography==41.0.3
+cryptography==41.0.4
 cyclonedx-python-lib==3.1.5
 decorator==5.1.1
 deep-merge==0.0.4
@@ -39,18 +39,19 @@ distlib==0.3.7
 docker==6.1.3
 dockerfile-parse==2.0.1
 dpath==2.1.3
-filelock==3.12.2
+filelock==3.12.4
 frozenlist==1.4.0
 gitdb==4.0.10
-GitPython==3.1.32
-identify==2.5.26
+GitPython==3.1.37
+identify==2.5.29
 idna==3.4
-igraph==0.10.6
+igraph==0.10.8
 importlib-metadata==6.8.0
+importlib-resources==5.0.7
 isodate==0.6.1
 Jinja2==3.1.2
 jmespath==1.0.1
-jsonschema==4.19.0
+jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
 junit-xml==1.9
 lark==1.1.7
@@ -63,23 +64,25 @@ multidict==6.0.4
 mypy-extensions==1.0.0
 networkx==2.6.3
 nodeenv==1.8.0
-openai==0.27.8
+openai==0.28.0
 packageurl-python==0.11.2
 packaging==23.1
 pathspec==0.11.2
 pip==23.2.1
 platformdirs==3.10.0
 ply==3.11
-policy-sentry==0.12.8
+policy-sentry==0.12.9
 policyuniverse==1.5.1.20230817
-pre-commit==3.3.3
+pre-commit==3.4.0
 pre-commit-hooks==4.4.0
-prettytable==3.8.0
+prettytable==3.9.0
 pycares==4.3.0
 pycep-parser==0.4.1
 pycparser==2.21
 Pygments==2.16.1
 pyparsing==3.1.1
+pyston==2.3.5
+pyston-autoload==2.3.5
 python-dateutil==2.8.2
 PyYAML==6.0.1
 rdflib==7.0.0
@@ -87,8 +90,8 @@ referencing==0.30.2
 regex==2023.8.8
 requests==2.31.0
 resolvelib==1.0.1
-rich==13.5.2
-rpds-py==0.9.2
+rich==13.5.3
+rpds-py==0.10.3
 ruamel.yaml==0.17.32
 ruamel.yaml.clib==0.2.7
 s3transfer==0.6.2
@@ -96,27 +99,28 @@ schema==0.7.5
 semantic-version==2.10.0
 setuptools==68.0.0
 six==1.16.0
-smmap==5.0.0
+smmap==5.0.1
 sortedcontainers==2.4.0
-soupsieve==2.4.1
-spdx-tools==0.8.0
+soupsieve==2.5
+spdx-tools==0.8.1
 subprocess-tee==0.4.1
 tabulate==0.9.0
 termcolor==2.3.0
 texttable==1.6.7
 toml==0.10.2
+tomli==2.0.1
 tqdm==4.66.1
-typing_extensions==4.7.1
+typing_extensions==4.8.0
 unidiff==0.7.5
 update-checker==0.18.0
-uritools==4.0.1
+uritools==4.0.2
 urllib3==1.26.16
-virtualenv==20.24.3
-wcmatch==8.4.1
+virtualenv==20.24.5
+wcmatch==8.5
 wcwidth==0.2.6
-websocket-client==1.6.1
+websocket-client==1.6.3
 wheel==0.41.0
 xmltodict==0.13.0
 yamllint==1.32.0
 yarl==1.9.2
-zipp==3.16.2
+zipp==3.17.0
